--- a/kancmatket_html/css/bootstrap.css
+++ b/kancmatket_html/css/bootstrap.css
@@ -3206,14 +3206,13 @@ input[type="button"].btn-block {
     float: left;
     min-width: 295px;
     padding: 5px 0;
-    margin: 5px 0 0;
+    margin: 0px 0 0;
     font-size: 14px;
     list-style: none;
     background-color: #fff;
     border: 1px solid #ccc;
     border: 1px solid rgba(0, 0, 0, 0.15);
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-radius: 6px;
     -webkit-box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.3);
 -moz-box-shadow:    2px 2px 2px 0px rgba(0, 0, 0, 0.3);
 box-shadow:         2px 2px 2px 0px rgba(0, 0, 0, 0.3);
