--- a/kancmatket_html/css/style.css
+++ b/kancmatket_html/css/style.css
@@ -745,6 +745,9 @@ padding: 11px 10px;
   margin: 0;
   padding-left: 0;
 }
+.dropdown_btn a {
+  color: #fff;
+}
 .wrapper {
   max-width: 900px;
   margin: 0 auto;
@@ -1128,6 +1131,7 @@ footer {
     background-color: rgba( 167, 202, 94, 0.9);
     padding-top: 20px;
     color: #fff;
+    z-index: 10;
 }
 .map_contacts_item:first-child {
   padding-top: 0;
@@ -1357,6 +1361,7 @@ border-color: transparent transparent #3e6b40 transparent;
   -o-filter: grayscale(100%); 
   -o-transition: .5s ease-in-out;
 }*/
+
 #popular h3 {
   color: rgb( 255, 153, 51 );
   -webkit-transition: .5s ease-in-out;
@@ -1367,6 +1372,7 @@ border-color: transparent transparent #3e6b40 transparent;
   font-size: 18px;
   text-transform: uppercase;
   padding-bottom: 5px;
+  height: 62px;
 }
 .popular_item img:hover {
   -webkit-filter: grayscale(100%);
@@ -2859,6 +2865,9 @@ text-align: left;
     background-image: none;
     background-color: #376439;
   }
+  .navbar-scroll_subnav {
+        position: static!important;
+      }
   .dropdown-menu {
     position: static;
     top: 100%;
