--- a/one2dream/css/style.css
+++ b/one2dream/css/style.css
@@ -40,7 +40,7 @@ header, .scroll {
   .contactTop img {
     position: absolute;
     top: 27.5px;
-    left: 415px; }
+    left: 0; }
 
 .number {
   font-size: 16px;
@@ -78,27 +78,29 @@ header, .scroll {
   .number i {
     color: #00baf7; }
 
-ul.mainMenu > li {
-  line-height: 100px;
-  display: inline-block;
-  float: left;
-  margin-right: 25px; }
-ul.mainMenu li:hover .subMenu {
-  display: block;
-  transition: 0.5s display;
-  -webkit-transition: 0.5s display;
-  -o-transition: 0.5s display; }
-ul.mainMenu a {
-  transition: 0.5s color;
-  -webkit-transition: 0.5s color;
-  -o-transition: 0.5s color;
-  color: #343434;
-  font-weight: bold; }
-ul.mainMenu a:hover {
-  color: #00baf7;
-  transition: 0.5s color;
-  -webkit-transition: 0.5s color;
-  -o-transition: 0.5s color; }
+ul.mainMenu {
+  margin-left: 290px; }
+  ul.mainMenu > li {
+    line-height: 100px;
+    display: inline-block;
+    float: left;
+    margin-right: 25px; }
+  ul.mainMenu li:hover .subMenu {
+    display: block;
+    transition: 0.5s display;
+    -webkit-transition: 0.5s display;
+    -o-transition: 0.5s display; }
+  ul.mainMenu a {
+    transition: 0.5s color;
+    -webkit-transition: 0.5s color;
+    -o-transition: 0.5s color;
+    color: #343434;
+    font-weight: bold; }
+  ul.mainMenu a:hover {
+    color: #00baf7;
+    transition: 0.5s color;
+    -webkit-transition: 0.5s color;
+    -o-transition: 0.5s color; }
 
 .subMenu {
   position: absolute;
@@ -644,5 +646,597 @@ footer {
   line-height: 30px !important;
   color: #00baf7;
   border-radius: 50%; }
+
+.Bline {
+  background-color: #00baf7;
+  height: 80px; }
+
+.mBline {
+  width: 1100px;
+  margin: 0 auto; }
+  .mBline h6 {
+    font-size: 15px;
+    font-family: 'Lato', sans-serif;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 80px;
+    float: left;
+    display: inline-block; }
+  .mBline div {
+    float: right;
+    display: inline-block;
+    line-height: 80px; }
+  .mBline a, .mBline div {
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+    color: white; }
+
+.mid {
+  width: 1100px;
+  margin: 0 auto; }
+
+.content {
+  overflow: hidden;
+  width: 1100px;
+  margin: 50px auto 135px auto;
+  font-family: 'Lato', sans-serif;
+  color: #86878b;
+  line-height: 1.625;
+  text-align: justify; }
+  .content span {
+    color: #343434;
+    font-weight: bold;
+    font-size: 16px; }
+
+.h1:after {
+  content: none; }
+
+.h1 {
+  font-weight: bold;
+  margin-top: 90px;
+  margin-bottom: 85px; }
+
+.cont2 {
+  overflow: hidden;
+  margin-bottom: 50px; }
+  .cont2 img {
+    float: left;
+    margin-right: 35px; }
+  .cont2 div {
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+    color: #86878b;
+    line-height: 1.8;
+    text-align: justify; }
+
+.rentCar {
+  overflow: hidden;
+  margin-top: 50px; }
+  .rentCar img {
+    width: 30%;
+    margin-left: 5%;
+    display: block;
+    float: left; }
+  .rentCar img:first-child {
+    margin-left: 0; }
+
+.offerWorks {
+  height: 50px;
+  width: 850px;
+  margin: 0 auto 100px; }
+
+.offer {
+  width: 30%;
+  text-align: center;
+  margin-left: 5%;
+  cursor: pointer;
+  float: left;
+  color: #2c2c2c;
+  font-size: 22px;
+  font-weight: bold;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  line-height: 36px; }
+
+.offer:hover {
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all; }
+
+.offer:first-child {
+  margin-left: 0; }
+
+.active-offer {
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  position: relative; }
+
+.active-offer:after {
+  content: '';
+  position: absolute;
+  left: 0%;
+  bottom: -32px;
+  width: 100%;
+  height: 3px;
+  background: #00baf7;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -o-transition: 0.5s all; }
+
+.descriptions {
+  width: 1100px;
+  margin: 0 auto;
+  position: relative;
+  height: 200px;
+  margin-bottom: 100px; }
+
+.description {
+  text-align: justify;
+  color: #86878b;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.active-description {
+  display: block; }
+
+/*adapt menu*/
+.nav, .coll {
+  margin: 27.5px 20px 0 0;
+  display: none;
+  float: right; }
+
+/*adaptive*/
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .descriptions {
+    width: 90%; }
+
+  .content {
+    width: 90%; }
+    .content .cont2, .content div {
+      margin: 0 auto;
+      width: 100%; }
+
+  .rentCar {
+    margin-top: 30px !important; }
+
+  .mBline {
+    width: 90%; }
+
+  .bunner {
+    height: 400px; }
+
+  ul.whyUSA {
+    width: 100%; }
+    ul.whyUSA li {
+      margin-left: 50px !important; }
+
+  .aboutUsText {
+    width: 80% !important; }
+
+  .comentsText {
+    width: 80%;
+    margin: 0 auto; }
+
+  .scroll {
+    max-width: 1024px !important; }
+
+  .scroll-mid {
+    width: 900px; }
+
+  .number {
+    margin-top: 10px !important;
+    width: 150px !important;
+    font-size: 16px !important;
+    float: right; }
+    .number span {
+      line-height: inherit !important;
+      text-align: center !important;
+      display: block; }
+    .number a {
+      height: 34px !important;
+      width: 130px !important;
+      line-height: 34px !important;
+      display: block !important;
+      margin: 0 auto !important; }
+
+  .coments {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 600px; }
+
+  .ourContacts {
+    padding-top: 40px;
+    padding-bottom: 80px;
+    width: 100%; }
+
+  .blogContent {
+    width: 100%; }
+
+  .blogText {
+    transition: 0.5s border;
+    -webkit-transition: 0.5s border;
+    -o-transition: 0.5s border;
+    max-width: 296px;
+    float: left;
+    margin-left: 6px;
+    height: 400px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 50px; }
+    .blogText a {
+      top: 27px; }
+
+  .form textarea {
+    width: 300px; } }
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .offerWorks {
+    width: 90%; }
+
+  .offer {
+    font-size: 20px; }
+
+  .descriptions {
+    width: 90%; }
+
+  .content {
+    width: 90%;
+    margin: 50px auto 0px auto; }
+    .content .cont2, .content div {
+      margin: 0 auto;
+      width: 100%; }
+      .content .cont2 img, .content div img {
+        max-width: 40%; }
+
+  .rentCar {
+    margin-top: 30px !important; }
+
+  .mBline {
+    width: 90%; }
+
+  .contactTop img {
+    width: 150px; }
+  .contactTop ul.mainMenu {
+    margin-left: 180px !important; }
+
+  .bunner {
+    height: 300px; }
+
+  ul.whyUSA {
+    width: 100%; }
+    ul.whyUSA li {
+      max-width: 130px;
+      margin-left: 50px !important;
+      text-align: justify; }
+      ul.whyUSA li span {
+        font-size: 14px; }
+      ul.whyUSA li div {
+        width: 80px;
+        height: 80px; }
+
+  h1 {
+    position: relative;
+    margin-top: 100px;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 100px; }
+
+  .aboutUs {
+    margin-top: 60px;
+    background: url("../img/about.jpg") no-repeat center center;
+    height: 600px;
+    width: 100%; }
+
+  .aboutUsText {
+    width: 80% !important; }
+    .aboutUsText h3 {
+      font-size: 30px;
+      margin-bottom: 60px; }
+    .aboutUsText p {
+      font-size: 14px; }
+
+  .coments h3 {
+    text-align: center;
+    font-size: 30px; }
+
+  .comentsText {
+    width: 80%;
+    margin: 0 auto; }
+
+  .scroll {
+    max-width: 768px !important; }
+
+  .scroll-mid {
+    width: 90%; }
+
+  .number {
+    margin-top: 10px !important;
+    width: 130px !important;
+    font-size: 16px !important;
+    float: right; }
+    .number span {
+      line-height: inherit !important;
+      text-align: center !important;
+      display: block; }
+    .number a {
+      height: 34px !important;
+      width: 130px !important;
+      line-height: 34px !important;
+      display: block !important;
+      margin: 0 auto !important; }
+
+  .coments {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 600px; }
+
+  .ourContacts {
+    padding-top: 40px;
+    padding-bottom: 80px;
+    width: 100%; }
+
+  .blogContent {
+    width: 80%; }
+    .blogContent h3 {
+      font-size: 30px;
+      margin: 70px 0 70px 50%; }
+
+  .blogText {
+    transition: 0.5s border;
+    -webkit-transition: 0.5s border;
+    -o-transition: 0.5s border;
+    max-width: 296px;
+    float: left;
+    margin-left: 6px;
+    height: 400px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 50px; }
+    .blogText a {
+      top: 27px; }
+
+  .form textarea {
+    width: 175px;
+    height: 110px; }
+
+  .form input[type='text'], .form input[type='tel'], .form input[type='email'] {
+    width: 200px; }
+
+  footer {
+    height: 80px; }
+    footer a {
+      line-height: 80px; } }
+@media screen and (min-width: 320px) and (max-width: 425px) {
+  .offerWorks {
+    width: 90%; }
+
+  .offer {
+    font-size: 18px;
+    height: 50px;
+    display: block;
+    width: 90%;
+    text-align: center;
+    margin-left: 0; }
+
+  .active-offer:after {
+    bottom: 0; }
+
+  .descriptions {
+    width: 90%;
+    height: 550px;
+    margin-bottom: 0; }
+
+  .content {
+    width: 90%;
+    margin: 50px auto 0px auto; }
+    .content .cont2, .content div {
+      margin: 0 auto;
+      width: 100%; }
+      .content .cont2 img, .content div img {
+        float: none; }
+
+  .mBline {
+    width: 90%; }
+    .mBline h6 {
+      line-height: 50px;
+      display: block;
+      float: none;
+      text-align: center; }
+    .mBline div {
+      float: none;
+      display: block;
+      line-height: 20px;
+      text-align: center; }
+
+  .rentCar {
+    margin-top: 20px !important; }
+    .rentCar img {
+      width: 100%;
+      margin-left: 0;
+      margin-top: 20px;
+      display: block; }
+
+  .nav, .coll {
+    display: inline-block;
+    color: #00baf7;
+    font-size: 24px; }
+
+  .mainMenu {
+    display: none; }
+
+  .contactTop img {
+    width: 150px; }
+  .contactTop ul.mainMenu {
+    margin-left: 0 !important;
+    width: 100%;
+    text-align: center;
+    float: left;
+    margin-top: 25px; }
+    .contactTop ul.mainMenu li {
+      float: none;
+      line-height: 30px;
+      margin: 0;
+      display: block; }
+
+  .subMenu {
+    position: static;
+    background: rgba(115, 218, 252, 0.5);
+    border-radius: 10px; }
+
+  .bunner {
+    height: 160px; }
+
+  ul.whyUSA {
+    width: 80%; }
+    ul.whyUSA li {
+      max-width: 100%;
+      margin-left: 0 !important;
+      text-align: justify;
+      margin-bottom: 20px; }
+      ul.whyUSA li span {
+        font-size: 14px; }
+      ul.whyUSA li div {
+        width: 80px;
+        height: 80px; }
+
+  h1 {
+    position: relative;
+    margin-top: 20px !important;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 70px !important; }
+
+  .ourUsers {
+    float: left;
+    width: 20%;
+    margin-left: 5%; }
+
+  .user {
+    margin-bottom: 5px;
+    float: none; }
+    .user img {
+      width: 40px;
+      height: 40px; }
+    .user span {
+      font-size: 14px; }
+
+  .activeUser img {
+    width: 50px !important;
+    height: 50px !important;
+    margin-bottom: 20px; }
+  .activeUser span:after {
+    top: -12px;
+    left: 25px;
+    width: 50px; }
+
+  .aboutUs {
+    margin-top: 10px;
+    background: url("../img/about.jpg") no-repeat center center;
+    height: 600px;
+    width: 100%; }
+
+  .aboutUsText {
+    width: 80% !important; }
+    .aboutUsText h3 {
+      margin-top: 60px;
+      font-size: 30px;
+      margin-bottom: 60px; }
+    .aboutUsText p {
+      font-size: 12px; }
+
+  .coments h3 {
+    text-align: center;
+    font-size: 30px;
+    margin: 30px 0 40px 50%; }
+
+  .coments h3:after {
+    top: 120%; }
+
+  .comentsText {
+    width: 70%;
+    margin: 0 auto;
+    height: 250px;
+    float: right;
+    margin-right: 5%; }
+
+  .scroll {
+    max-width: 768px !important; }
+
+  .scroll-mid {
+    width: 90%; }
+
+  .number {
+    display: none; }
+
+  .coments {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    height: 600px; }
+
+  .ourContacts {
+    padding-top: 40px;
+    padding-bottom: 30px;
+    width: 100%; }
+    .ourContacts div {
+      width: 90% !important;
+      margin: 0 auto;
+      float: none; }
+
+  .blogContent {
+    width: 80%; }
+    .blogContent h3 {
+      font-size: 30px;
+      margin: 0 0 70px 50%; }
+
+  .blogText {
+    transition: 0.5s border;
+    -webkit-transition: 0.5s border;
+    -o-transition: 0.5s border;
+    max-width: 296px;
+    float: left;
+    margin-left: 6px;
+    height: 400px;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+    text-align: center;
+    margin-bottom: 50px; }
+    .blogText a {
+      top: 27px; }
+
+  .form textarea {
+    width: 158px;
+    height: 110px; }
+
+  .form input[type='text'], .form input[type='tel'], .form input[type='email'] {
+    width: 200px; }
+
+  footer {
+    height: 80px; }
+    footer a {
+      line-height: 80px; }
+
+  #modal_form_recall1 {
+    width: 280px;
+    margin-left: -140px;
+    margin-top: -135px;
+    height: 270px; }
+
+  #modal_form_recall1 input[type='text'], #modal_form_recall1 input[type='tel'] {
+    width: 145px; }
+
+  #modal_form_recall1 form {
+    margin: 30px; }
+
+  .mBline {
+    width: 90%; } }
 
 /*# sourceMappingURL=style.css.map */
