--- a/one2dream/css/style.scss
+++ b/one2dream/css/style.scss
@@ -1764,3 +1764,15 @@ overflow: hidden;
   }
 
 }
+
+@media screen and(min-width: 1600px) {
+  .bunner{
+    height: 600px;
+  }
+}
+
+@media screen and(min-width: 1900px) {
+  .bunner{
+    height: 700px;
+  }
+}
