--- a/one2dream/css/style.css
+++ b/one2dream/css/style.css
@@ -387,7 +387,6 @@ ul.whyUSA {
       font-size: 14px;
       display: inline-block; }
     .ourContacts div a {
-      margin: 40px auto 0 auto;
       line-height: 46px;
       display: block;
       width: 170px;
@@ -879,7 +878,7 @@ footer {
     border: none !important;
     line-height: 35px !important; }
   #f a:hover, #vk a:hover {
-    background: #23599b !important;
+    opacity: 0.8;
     color: white; }
   #f i, #vk i {
     font-size: 16px;
