--- a/one2dream/css/style.css
+++ b/one2dream/css/style.css
@@ -956,8 +956,64 @@ footer {
 .height, .Hcontent {
   overflow: hidden; }
 
+.sText {
+  position: absolute;
+  left: 220px;
+  top: 100px;
+  width: 560px;
+  height: 155px;
+  text-align: left;
+  z-index: 28; }
+  .sText h5 {
+    font-size: 45px;
+    font-family: "Lato";
+    color: #fefefe;
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: left;
+    text-shadow: 0px 0px 50px rgba(0, 30, 43, 0.1);
+    font-weight: 500; }
+  .sText span {
+    margin-top: 20px;
+    font-size: 20px;
+    color: white; }
+  .sText a {
+    margin-top: 30px;
+    cursor: pointer;
+    width: 150px;
+    height: 45px;
+    line-height: 45px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    background: transparent;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    border: 2px solid #ffffff;
+    display: block;
+    text-align: center; }
+  .sText a:hover {
+    color: #00baf7;
+    border: 2px solid #00baf7;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all; }
+
+.black {
+  color: black !important; }
+  .black h5, .black span {
+    color: black; }
+
 /*adaptive*/
 @media screen and (min-width: 769px) and (max-width: 1024px) {
+  .sText {
+    left: 100px; }
+    .sText h5 {
+      font-size: 40px; }
+
   .hospitals {
     width: 90%; }
 
@@ -1057,6 +1113,13 @@ footer {
   .form textarea {
     width: 300px; } }
 @media screen and (min-width: 426px) and (max-width: 768px) {
+  .sText {
+    left: 100px;
+    top: 60px;
+    width: 400px; }
+    .sText h5 {
+      font-size: 36px; }
+
   .fa-chevron-down {
     font-size: 12px !important; }
 
@@ -1234,6 +1297,9 @@ footer {
     footer a {
       line-height: 80px; } }
 @media screen and (min-width: 320px) and (max-width: 425px) {
+  .sText {
+    display: none; }
+
   .map {
     width: 95%; }
 
