--- a/one2dream/css/style.scss
+++ b/one2dream/css/style.scss
@@ -1089,10 +1089,73 @@ footer {
 overflow: hidden;
 }
 
+.sText{
+  position: absolute;
+  left: 220px;
+  top: 100px;
+  width: 560px;
+  height: 155px;
+  text-align: left;
+  z-index: 28;
+  h5{
+    font-size: 45px;
+    font-family: "Lato";
+    color: rgb(254, 254, 254);
+    text-transform: uppercase;
+    line-height: 1.2;
+    text-align: left;
+    text-shadow: 0px 0px 50px rgba(0, 30, 43, 0.1);
+    font-weight: 500;
+  }
+
+  span{
+    margin-top: 20px;
+    font-size: 20px;
+    color: white;
+  }
+
+  a{
+    margin-top: 30px;
+    cursor: pointer;
+    width: 150px;
+    height: 45px;
+    line-height: 45px;
+    box-sizing: border-box;
+    border-radius: 30px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #ffffff;
+    background: transparent;
+    @include transition(0.5s,all);
+    border: 2px solid #ffffff;
+    display: block;
+    text-align: center;
+  }
+  a:hover{
+    color: #00baf7;
+    border: 2px solid #00baf7;
+    @include transition(0.5s,all);
+  }
+
+}
+
+.black{
+  color: black!important;
+  h5, span{
+    color: black;
+  }
+}
+
+
 /*adaptive*/
 
 @media screen and(min-width: 769px) and(max-width: 1024px) {
-
+  .sText{
+    left: 100px;
+    h5{
+      font-size: 40px;
+    }
+  }
   .hospitals{
     width: 90%;
   }
@@ -1214,6 +1277,16 @@ overflow: hidden;
 }
 
 @media screen and(min-width: 426px) and(max-width: 768px) {
+
+  .sText{
+    left: 100px;
+    top: 60px;
+    width: 400px;
+    h5{
+      font-size: 36px;
+    }
+  }
+
   .fa-chevron-down {
     font-size: 12px !important;
   }
@@ -1428,6 +1501,11 @@ overflow: hidden;
 }
 
 @media screen and(min-width: 320px) and(max-width: 425px) {
+
+  .sText{
+    display: none;
+  }
+
   .map {
     width: 95%;
   }
