--- a/one2dream/css/style.scss
+++ b/one2dream/css/style.scss
@@ -470,6 +470,7 @@ ul.whyUSA {
       font-size: 13px;
       font-weight: 500;
       color: #00baf7;
+      margin: 0 auto;
       @include transition(0.5s, all);
     }
     a:hover {
