--- a/Domolend/css/style.css
+++ b/Domolend/css/style.css
@@ -2927,6 +2927,35 @@ hr {
 .burger, .corpBurger, .callBack1 {
   display: none; }
 
+.callbackForm {
+  display: none;
+  box-sizing: border-box;
+  padding-top: 10px;
+  background: grey;
+  z-index: 1500;
+  text-align: center;
+  width: 200px;
+  height: 170px;
+  position: fixed;
+  /* -webkit-transform: translate(-50%, -50%);
+   -moz-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   -o-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);*/ }
+  .callbackForm input[type='text'], .callbackForm input[type='email'] {
+    height: 20px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #642bb1;
+    margin-top: 5px; }
+  .callbackForm input[type='submit'] {
+    margin-top: 10px; }
+  .callbackForm label {
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif; }
+  .callbackForm p {
+    margin-top: 5px; }
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   .width1000 {
     width: 900px; }
