--- a/Domolend/css/style.scss
+++ b/Domolend/css/style.scss
@@ -325,10 +325,41 @@ ul, li {
   left: 0;
   background: #ffcc33;
   z-index: 9000;
+  width: 350px;
+
+  ul {
+    display: block;
+    float: left;
+    margin-left: 5px;
+  }
+
+  img {
+    max-height: 200px;
+    max-width: 200px;
+  }
+
   li {
     display: block !important;
-    width: 240px !important;
+    width: 120px !important;
     padding: 5px 0 !important;
+    a {
+      @include transition(0.5s, color);
+    }
+  }
+  li:hover {
+    background: #CDDC39;
+    a {
+      @include transition(0.5s, color);
+      color: #642bb1;
+    }
+  }
+
+  div {
+    max-width: 200px;
+    max-height: 200px;
+    float: right;
+    margin-right: 20px;
+    margin-top: 30px;
   }
 }
 
@@ -1878,6 +1909,7 @@ a.moveWithOutRegistration:hover {
     width: 50px;
     font-size: 12px;
     color: #3b3b3b;
+    margin-top: -6px;
     span {
 
       font-size: 24px;
@@ -1891,6 +1923,7 @@ a.moveWithOutRegistration:hover {
     span {
       color: #3b3b3b;
       font-size: 12px;
+      top: 0;
     }
   }
 }
@@ -1904,6 +1937,7 @@ a.moveWithOutRegistration:hover {
   margin-bottom: 20px;
   span {
     font-size: 30px !important;
+    top: 0;
   }
 
 }
@@ -3152,7 +3186,7 @@ hr {
   -o-transform-origin: 70% 0 0;
   -ms-transform-origin: 70% 0 0;
   transform-origin: 70% 0 0;
-  width: 405px;
+  width: 302px;
   -webkit-transition: all .4s ease;
   -moz-transition: all .4s ease;
   -o-transition: all .4s ease;
@@ -3330,18 +3364,18 @@ hr {
 .callbackForm {
   display: none;
   box-sizing: border-box;
-  padding-top:10px;
+  padding-top: 10px;
   background: grey;
   z-index: 1500;
   text-align: center;
   width: 200px;
   height: 170px;
   position: fixed;
- /* -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);*/
+  /* -webkit-transform: translate(-50%, -50%);
+   -moz-transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%, -50%);
+   -o-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);*/
 
   input[type='text'], input[type='email'] {
     height: 20px;
@@ -3351,8 +3385,8 @@ hr {
     margin-top: 5px;
   }
 
-  input[type='submit']{
-    margin-top:10px;
+  input[type='submit'] {
+    margin-top: 10px;
   }
 
   label {
@@ -3413,6 +3447,19 @@ hr {
     li {
       width: 100% !important;
     }
+
+    div {
+      max-width: 100px;
+      max-height: 200px;
+      float: right;
+      margin-right: 20px;
+      margin-top: 50px;
+    }
+    img {
+      max-height: 200px;
+      max-width: 100px;
+    }
+
   }
 
   .f_l_m_name {
@@ -3583,8 +3630,15 @@ hr {
   .subMenu {
     position: static;
     margin-top: 10px;
+    width: 100%;
+    ul {
+      float: none;
+    }
     li {
       width: 100% !important;
+    }
+    div {
+      display: none;
     }
   }
 
@@ -4047,9 +4101,17 @@ hr {
     }
   }
 
+  .check1 {
+    float: none;
+  }
+  .check2 {
+    float: none;
+    text-align: left;
+  }
+
   .we_check li {
-    display: block;
     margin-bottom: 5px;
+    margin-left: 20px;
   }
 
   .bSlider {
@@ -4101,7 +4163,17 @@ hr {
 
   .subMenu {
     position: static;
+    width: 100%;
     margin-top: 10px;
+
+    div {
+      display: none;
+    }
+
+    ul {
+      float: none;
+    }
+
     li {
       width: 100% !important;
     }
@@ -4379,6 +4451,20 @@ hr {
 
   .textNewses {
     width: 530px;
+  }
+
+}
+
+@media screen and(width: 320px) {
+  .banner {
+    height: 150px !important;
+  }
+
+}
+
+@media screen and(width: 375px) {
+  .banner {
+    height: 180px !important;
   }
 
 }
