--- a/LPI/css/style.scss
+++ b/LPI/css/style.scss
@@ -102,12 +102,12 @@ body {
 }
 
 .posLapTop {
-  position: relative;
   float: left;
   width: 50%;
-  z-index: 1;
-  div.nth2, #target {
+
+  #target {
     position: relative;
+    z-index: 1;
     zoom: 1;
     width: 366px;
     height: 300px;
@@ -116,7 +116,7 @@ body {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    behavior: url(/pie/PIE.htc);
+    behavior: url(css/PIE.htc);
     p {
       text-align: justify;
       width: 275px;
